--- a/templates/AdminProfile.html
+++ b/templates/AdminProfile.html
@@ -67,7 +67,7 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
                             <li><a class="active" href="AdminProfile.html">My Profile</a></li>
-                            <li><a data-scroll href="AddNewUser.html">Add New User</a></li>
+                            <li><a data-scroll href="AddDoctor.html">Add New Doctor</a></li>
                             <li><a data-scroll href="/logout">Logout</a></li>
                         </ul>
                     </div>
